--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
-<head th:replace="~{fragments :: head}">
-</head>
+<head th:replace="~{fragments :: head}"></head>
 <body>
 
 <div th:replace="~{fragments :: page-header}"></div>
@@ -41,10 +40,8 @@
       </tr>
       </tbody>
     </table>
-    <br>
 
-
-</div>
+  </div>
 
 </div>
 
