--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -20,11 +20,16 @@
   <tr>
     <!-- TODO #2: Complete the View Jobs By Category Table. -->
 
-    <td></td> <!-- Feel free to remove or modify this element if necessary. -->
+    <td>
+
+    </td> <!-- Feel free to remove or modify this element if necessary. -->
 
     <td th:each="category : ${tableChoices}">
       <ul>
-        <li th:each="item : ${category.value}">
+        <li th:if="${category.key == 'all'}">
+          <a th:href="@{/list/jobs(column=${category.key})}" th:text="${category.value}"></a>
+        </li>
+        <li th:each="item : ${category.value}" th:unless="${category.key == 'all'}">
           <a th:href="@{/list/jobs(column=${category.key},value=${item})}" th:text="${item}"></a>
         </li>
       </ul>
