--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -38,24 +38,32 @@
 
   <!-- TODO #4 - Loop over the search results to display all job fields. -->
     <div>
-        <h2>Results</h2>
-        <table>
-            <thead>
-            <tr>
-                <th>Title</th>
-                <th>Employer</th>
-                <th>Location</th>
-                <th>Position Type</th>
-                <th>Core Competency</th>
-            </tr>
-            </thead>
+        <h2>Search Results</h2>
+        <table th:each="job: ${jobs}" class = "job-listing">
             <tbody>
-            <tr th:each="job : ${jobs}">
-                <td th:text="${job.title}">Job Title</td>
-                <td th:text="${job.employer}">Employer</td>
-                <td th:text="${job.location}">Location</td>
-                <td th:text="${job.positionType}">Position Type</td>
-                <td th:text="${job.coreCompetency}">Core Competency</td>
+            <tr>
+                <th>ID</th>
+                <td th:text="${job.id}"></td>
+            </tr>
+            <tr>
+                <th>Name</th>
+                <td th:text="${job.name}"></td>
+            </tr>
+            <tr>
+                <th>Employer</th>
+                <td><a th:href="@{/list/jobs?column=employer&value=${job.employer}}" th:text="${job.employer}"></a></td>
+            </tr>
+            <tr>
+                <th>Location</th>
+                <td><a th:href="@{/list/jobs?column=location&value=${job.location}}" th:text="${job.location}"></a></td>
+            </tr>
+            <tr>
+                <th>Position Type</th>
+                <td><a th:href="@{/list/jobs?column=positionType&value=${job.positionType}}" th:text="${job.positionType}"></a></td>
+            </tr>
+            <tr>
+                <th>Skill</th>
+                <td><a th:href="@{/list/jobs?column=coreCompetency&value=${job.coreCompetency}}" th:text="${job.coreCompetency}"></a></td>
             </tr>
             </tbody>
         </table>
