project complete, need to fix bug with two columns

--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -22,19 +22,19 @@
     </tr>
     <tr>
       <td>Employer</td>
-      <td><a th:href="@{/list/jobs(column=employer,value=${job.getEmployer()})}" th:text="${job.getEmployer()}"></a></td>
+      <td th:text="${job.getEmployer()}"></td>
     </tr>
     <tr>
       <td>Location</td>
-      <td><a th:href="@{/list/jobs(column=location,value=${job.getLocation()})}" th:text="${job.getLocation()}"></a></td>
+      <td th:text="${job.getLocation()}"></td>
     </tr>
     <tr>
       <td>Position Type</td>
-      <td><a th:href="@{/list/jobs(column=positionType,value=${job.getPositionType()})}" th:text="${job.getPositionType()}"></a></td>
+      <td th:text="${job.getPositionType()}"></td>
     </tr>
     <tr>
       <td>Skill</td>
-      <td> <a th:href="@{/list/jobs(column=coreCompetency,value=${job.getCoreCompetency()})}" th:text="${job.getCoreCompetency()}"></a></td>
+      <td th:text="${job.getCoreCompetency()}"></td>
     </tr>
   </table>
 
