--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -20,14 +20,11 @@
   <tr>
     <!-- TODO #2: Complete the View Jobs By Category Table. -->
 
-    <td>
-      <a th:href="@{/list/jobs(column=all,value=all)}">All Jobs</a>
-    </td> <!-- Feel free to remove or modify this element if necessary. -->
+    <td></td> <!-- Feel free to remove or modify this element if necessary. -->
 
     <td th:each="category : ${tableChoices}">
       <ul>
-
-        <li th:each="item : ${category.value}" th:unless="${category.key == 'all'}">
+        <li th:each="item : ${category.value}">
           <a th:href="@{/list/jobs(column=${category.key},value=${item})}" th:text="${item}"></a>
         </li>
       </ul>
